tests/paczka1/fuzzy1/40389620.err
Error in line 20: 6YGpBNroOC A565 22,2
Error in line 24: LN1PTKJmJHu A900 90,5
Error in line 28: A900 A415 27,4
Error in line 30: A900 A900 5,1
